// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`UU5.Bricks.Lsi allowTags UU5.Bricks.Lsi props - allowTags is used in example 1`] = `
<lsi-item
  className={null}
  content="Item: cs, en, sk -> (en) When an unknown language is displayed Environment.defaultLanguage en"
  controlled={true}
  disabled={false}
  dynamic={false}
  hidden={false}
  id="uuID3"
  ignoreInnerHTML={false}
  key="uuID3"
  language="en"
  mainAttrs={null}
  name={null}
  nestingLevel="bigBoxCollection"
  noIndex={false}
  pureRender={false}
  ref_={null}
  selected={false}
  style={null}
  tooltip={null}
/>
`;

exports[`UU5.Bricks.Lsi props allowTags 1`] = `
<lsi-item
  className={null}
  content="Text in Children"
  controlled={true}
  disabled={false}
  dynamic={false}
  hidden={false}
  id="childID"
  ignoreInnerHTML={false}
  key="childID"
  language="cs"
  mainAttrs={null}
  name={null}
  nestingLevel="bigBoxCollection"
  noIndex={false}
  pureRender={false}
  ref_={null}
  selected={false}
  style={null}
  tooltip={null}
/>
`;

exports[`UU5.Bricks.Lsi props checkGrammar 1`] = `
<lsi-item
  className={null}
  content="Text in Children"
  controlled={true}
  disabled={false}
  dynamic={false}
  hidden={false}
  id="childID"
  ignoreInnerHTML={false}
  key="childID"
  language="cs"
  mainAttrs={null}
  name={null}
  nestingLevel="bigBoxCollection"
  noIndex={false}
  pureRender={false}
  ref_={null}
  selected={false}
  style={null}
  tooltip={null}
/>
`;

exports[`UU5.Bricks.Lsi props checkGrammar 2`] = `
<lsi-item
  className={null}
  content="Text in Children"
  controlled={true}
  disabled={false}
  dynamic={false}
  hidden={false}
  id="childID"
  ignoreInnerHTML={false}
  key="childID"
  language="cs"
  mainAttrs={null}
  name={null}
  nestingLevel="bigBoxCollection"
  noIndex={false}
  pureRender={false}
  ref_={null}
  selected={false}
  style={null}
  tooltip={null}
/>
`;

exports[`UU5.Bricks.Lsi props checkGrammar 3`] = `
<lsi-item
  className={null}
  content="Text in Children"
  controlled={true}
  disabled={false}
  dynamic={false}
  hidden={false}
  id="childID"
  ignoreInnerHTML={false}
  key="childID"
  language="cs"
  mainAttrs={null}
  name={null}
  nestingLevel="bigBoxCollection"
  noIndex={false}
  pureRender={false}
  ref_={null}
  selected={false}
  style={null}
  tooltip={null}
/>
`;

exports[`UU5.Bricks.Lsi props checkGrammar 4`] = `
<lsi-item
  className={null}
  content="Text in Children"
  controlled={true}
  disabled={false}
  dynamic={false}
  hidden={false}
  id="childID"
  ignoreInnerHTML={false}
  key="childID"
  language="cs"
  mainAttrs={null}
  name={null}
  nestingLevel="bigBoxCollection"
  noIndex={false}
  pureRender={false}
  ref_={null}
  selected={false}
  style={null}
  tooltip={null}
/>
`;

exports[`UU5.Bricks.Lsi props checkHighlight 1`] = `
<lsi-item
  className={null}
  content="Text in Children"
  controlled={true}
  disabled={false}
  dynamic={false}
  hidden={false}
  id="childID"
  ignoreInnerHTML={false}
  key="childID"
  language="cs"
  mainAttrs={null}
  name={null}
  nestingLevel="bigBoxCollection"
  noIndex={false}
  pureRender={false}
  ref_={null}
  selected={false}
  style={null}
  tooltip={null}
/>
`;

exports[`UU5.Bricks.Lsi props checkHighlight 2`] = `
<lsi-item
  className={null}
  content="Text in Children"
  controlled={true}
  disabled={false}
  dynamic={false}
  hidden={false}
  id="childID"
  ignoreInnerHTML={false}
  key="childID"
  language="cs"
  mainAttrs={null}
  name={null}
  nestingLevel="bigBoxCollection"
  noIndex={false}
  pureRender={false}
  ref_={null}
  selected={false}
  style={null}
  tooltip={null}
/>
`;

exports[`UU5.Bricks.Lsi props checkHighlight 3`] = `
<lsi-item
  className={null}
  content="Text in Children"
  controlled={true}
  disabled={false}
  dynamic={false}
  hidden={false}
  id="childID"
  ignoreInnerHTML={false}
  key="childID"
  language="cs"
  mainAttrs={null}
  name={null}
  nestingLevel="bigBoxCollection"
  noIndex={false}
  pureRender={false}
  ref_={null}
  selected={false}
  style={null}
  tooltip={null}
/>
`;

exports[`UU5.Bricks.Lsi props checkHighlight 4`] = `
<lsi-item
  className={null}
  content="Text in Children"
  controlled={true}
  disabled={false}
  dynamic={false}
  hidden={false}
  id="childID"
  ignoreInnerHTML={false}
  key="childID"
  language="cs"
  mainAttrs={null}
  name={null}
  nestingLevel="bigBoxCollection"
  noIndex={false}
  pureRender={false}
  ref_={null}
  selected={false}
  style={null}
  tooltip={null}
/>
`;

exports[`UU5.Bricks.Lsi props checkSpaces 1`] = `
<lsi-item
  className={null}
  content="Text in Children"
  controlled={true}
  disabled={false}
  dynamic={false}
  hidden={false}
  id="childID"
  ignoreInnerHTML={false}
  key="childID"
  language="cs"
  mainAttrs={null}
  name={null}
  nestingLevel="bigBoxCollection"
  noIndex={false}
  pureRender={false}
  ref_={null}
  selected={false}
  style={null}
  tooltip={null}
/>
`;

exports[`UU5.Bricks.Lsi props checkSpaces 2`] = `
<lsi-item
  className={null}
  content="Text in Children"
  controlled={true}
  disabled={false}
  dynamic={false}
  hidden={false}
  id="childID"
  ignoreInnerHTML={false}
  key="childID"
  language="cs"
  mainAttrs={null}
  name={null}
  nestingLevel="bigBoxCollection"
  noIndex={false}
  pureRender={false}
  ref_={null}
  selected={false}
  style={null}
  tooltip={null}
/>
`;

exports[`UU5.Bricks.Lsi props checkSpaces 3`] = `
<lsi-item
  className={null}
  content="Text in Children"
  controlled={true}
  disabled={false}
  dynamic={false}
  hidden={false}
  id="childID"
  ignoreInnerHTML={false}
  key="childID"
  language="cs"
  mainAttrs={null}
  name={null}
  nestingLevel="bigBoxCollection"
  noIndex={false}
  pureRender={false}
  ref_={null}
  selected={false}
  style={null}
  tooltip={null}
/>
`;

exports[`UU5.Bricks.Lsi props checkSpaces 4`] = `
<lsi-item
  className={null}
  content="Text in Children"
  controlled={true}
  disabled={false}
  dynamic={false}
  hidden={false}
  id="childID"
  ignoreInnerHTML={false}
  key="childID"
  language="cs"
  mainAttrs={null}
  name={null}
  nestingLevel="bigBoxCollection"
  noIndex={false}
  pureRender={false}
  ref_={null}
  selected={false}
  style={null}
  tooltip={null}
/>
`;

exports[`UU5.Bricks.Lsi props className 1`] = `
<lsi-item
  className={null}
  content="Text in Children"
  controlled={true}
  disabled={false}
  dynamic={false}
  hidden={false}
  id="childID"
  ignoreInnerHTML={false}
  key="childID"
  language="cs"
  mainAttrs={null}
  name={null}
  nestingLevel="bigBoxCollection"
  noIndex={false}
  pureRender={false}
  ref_={null}
  selected={false}
  style={null}
  tooltip={null}
/>
`;

exports[`UU5.Bricks.Lsi props content 1`] = `12345`;

exports[`UU5.Bricks.Lsi props content 2`] = `
<UU5.Common.TextCorrectorContextConsumer
  key="0"
  language="en-us"
  text="This is Content from ContentMixin"
/>
`;

exports[`UU5.Bricks.Lsi props content 3`] = `
<UU5.Common.TextCorrectorContextConsumer
  key="0"
  language="en-us"
  text="This is Content from ContentMixin"
/>
`;

exports[`UU5.Bricks.Lsi props content 4`] = `12345`;

exports[`UU5.Bricks.Lsi props controlled 1`] = `
<lsi-item
  className={null}
  content="Text in Children"
  controlled={true}
  disabled={false}
  dynamic={false}
  hidden={false}
  id="childID"
  ignoreInnerHTML={false}
  key="childID"
  language="cs"
  mainAttrs={null}
  name={null}
  nestingLevel="bigBoxCollection"
  noIndex={false}
  pureRender={false}
  ref_={null}
  selected={false}
  style={null}
  tooltip={null}
/>
`;

exports[`UU5.Bricks.Lsi props controlled 2`] = `
<lsi-item
  className={null}
  content="Text in Children"
  controlled={true}
  disabled={false}
  dynamic={false}
  hidden={false}
  id="childID"
  ignoreInnerHTML={false}
  key="childID"
  language="cs"
  mainAttrs={null}
  name={null}
  nestingLevel="bigBoxCollection"
  noIndex={false}
  pureRender={false}
  ref_={null}
  selected={false}
  style={null}
  tooltip={null}
/>
`;

exports[`UU5.Bricks.Lsi props controlled 3`] = `
<lsi-item
  className={null}
  content="Text in Children"
  controlled={true}
  disabled={false}
  dynamic={false}
  hidden={false}
  id="childID"
  ignoreInnerHTML={false}
  key="childID"
  language="cs"
  mainAttrs={null}
  name={null}
  nestingLevel="bigBoxCollection"
  noIndex={false}
  pureRender={false}
  ref_={null}
  selected={false}
  style={null}
  tooltip={null}
/>
`;

exports[`UU5.Bricks.Lsi props controlled 4`] = `
<lsi-item
  className={null}
  content="Text in Children"
  controlled={true}
  disabled={false}
  dynamic={false}
  hidden={false}
  id="childID"
  ignoreInnerHTML={false}
  key="childID"
  language="cs"
  mainAttrs={null}
  name={null}
  nestingLevel="bigBoxCollection"
  noIndex={false}
  pureRender={false}
  ref_={null}
  selected={false}
  style={null}
  tooltip={null}
/>
`;

exports[`UU5.Bricks.Lsi props default props 1`] = `
<lsi-item
  className={null}
  content="Text in Children"
  controlled={true}
  disabled={false}
  dynamic={false}
  hidden={false}
  id="childID"
  ignoreInnerHTML={false}
  key="childID"
  language="cs"
  mainAttrs={null}
  name={null}
  nestingLevel="bigBoxCollection"
  noIndex={false}
  pureRender={false}
  ref_={null}
  selected={false}
  style={null}
  tooltip={null}
/>
`;

exports[`UU5.Bricks.Lsi props disabled 1`] = `
<lsi-item
  className={null}
  content="Text in Children"
  controlled={true}
  disabled={true}
  dynamic={false}
  hidden={false}
  id="childID"
  ignoreInnerHTML={false}
  key="childID"
  language="cs"
  mainAttrs={null}
  name={null}
  nestingLevel="bigBoxCollection"
  noIndex={false}
  pureRender={false}
  ref_={null}
  selected={false}
  style={null}
  tooltip={null}
/>
`;

exports[`UU5.Bricks.Lsi props disabled 2`] = `
<lsi-item
  className={null}
  content="Text in Children"
  controlled={true}
  disabled={false}
  dynamic={false}
  hidden={false}
  id="childID"
  ignoreInnerHTML={false}
  key="childID"
  language="cs"
  mainAttrs={null}
  name={null}
  nestingLevel="bigBoxCollection"
  noIndex={false}
  pureRender={false}
  ref_={null}
  selected={false}
  style={null}
  tooltip={null}
/>
`;

exports[`UU5.Bricks.Lsi props disabled 3`] = `
<lsi-item
  className={null}
  content="Text in Children"
  controlled={true}
  disabled={false}
  dynamic={false}
  hidden={false}
  id="childID"
  ignoreInnerHTML={false}
  key="childID"
  language="cs"
  mainAttrs={null}
  name={null}
  nestingLevel="bigBoxCollection"
  noIndex={false}
  pureRender={false}
  ref_={null}
  selected={false}
  style={null}
  tooltip={null}
/>
`;

exports[`UU5.Bricks.Lsi props disabled 4`] = `
<lsi-item
  className={null}
  content="Text in Children"
  controlled={true}
  disabled={true}
  dynamic={false}
  hidden={false}
  id="childID"
  ignoreInnerHTML={false}
  key="childID"
  language="cs"
  mainAttrs={null}
  name={null}
  nestingLevel="bigBoxCollection"
  noIndex={false}
  pureRender={false}
  ref_={null}
  selected={false}
  style={null}
  tooltip={null}
/>
`;

exports[`UU5.Bricks.Lsi props dynamic 1`] = `
<lsi-item
  className={null}
  content="Text in Children"
  controlled={true}
  disabled={false}
  dynamic={false}
  hidden={false}
  id="childID"
  ignoreInnerHTML={false}
  key="childID"
  language="cs"
  mainAttrs={null}
  name={null}
  nestingLevel="bigBoxCollection"
  noIndex={false}
  pureRender={false}
  ref_={null}
  selected={false}
  style={null}
  tooltip={null}
/>
`;

exports[`UU5.Bricks.Lsi props dynamic 2`] = `
<lsi-item
  className={null}
  content="Text in Children"
  controlled={true}
  disabled={false}
  dynamic={false}
  hidden={false}
  id="childID"
  ignoreInnerHTML={false}
  key="childID"
  language="cs"
  mainAttrs={null}
  name={null}
  nestingLevel="bigBoxCollection"
  noIndex={false}
  pureRender={false}
  ref_={null}
  selected={false}
  style={null}
  tooltip={null}
/>
`;

exports[`UU5.Bricks.Lsi props dynamic 3`] = `
<lsi-item
  className={null}
  content="Text in Children"
  controlled={true}
  disabled={false}
  dynamic={false}
  hidden={false}
  id="childID"
  ignoreInnerHTML={false}
  key="childID"
  language="cs"
  mainAttrs={null}
  name={null}
  nestingLevel="bigBoxCollection"
  noIndex={false}
  pureRender={false}
  ref_={null}
  selected={false}
  style={null}
  tooltip={null}
/>
`;

exports[`UU5.Bricks.Lsi props dynamic 4`] = `
<lsi-item
  className={null}
  content="Text in Children"
  controlled={true}
  disabled={false}
  dynamic={false}
  hidden={false}
  id="childID"
  ignoreInnerHTML={false}
  key="childID"
  language="cs"
  mainAttrs={null}
  name={null}
  nestingLevel="bigBoxCollection"
  noIndex={false}
  pureRender={false}
  ref_={null}
  selected={false}
  style={null}
  tooltip={null}
/>
`;

exports[`UU5.Bricks.Lsi props hidden 1`] = `
<lsi-item
  className={null}
  content="Text in Children"
  controlled={true}
  disabled={false}
  dynamic={false}
  hidden={true}
  id="childID"
  ignoreInnerHTML={false}
  key="childID"
  language="cs"
  mainAttrs={null}
  name={null}
  nestingLevel="bigBoxCollection"
  noIndex={false}
  pureRender={false}
  ref_={null}
  selected={false}
  style={null}
  tooltip={null}
/>
`;

exports[`UU5.Bricks.Lsi props hidden 2`] = `
<lsi-item
  className={null}
  content="Text in Children"
  controlled={true}
  disabled={false}
  dynamic={false}
  hidden={false}
  id="childID"
  ignoreInnerHTML={false}
  key="childID"
  language="cs"
  mainAttrs={null}
  name={null}
  nestingLevel="bigBoxCollection"
  noIndex={false}
  pureRender={false}
  ref_={null}
  selected={false}
  style={null}
  tooltip={null}
/>
`;

exports[`UU5.Bricks.Lsi props hidden 3`] = `
<lsi-item
  className={null}
  content="Text in Children"
  controlled={true}
  disabled={false}
  dynamic={false}
  hidden={false}
  id="childID"
  ignoreInnerHTML={false}
  key="childID"
  language="cs"
  mainAttrs={null}
  name={null}
  nestingLevel="bigBoxCollection"
  noIndex={false}
  pureRender={false}
  ref_={null}
  selected={false}
  style={null}
  tooltip={null}
/>
`;

exports[`UU5.Bricks.Lsi props hidden 4`] = `
<lsi-item
  className={null}
  content="Text in Children"
  controlled={true}
  disabled={false}
  dynamic={false}
  hidden={true}
  id="childID"
  ignoreInnerHTML={false}
  key="childID"
  language="cs"
  mainAttrs={null}
  name={null}
  nestingLevel="bigBoxCollection"
  noIndex={false}
  pureRender={false}
  ref_={null}
  selected={false}
  style={null}
  tooltip={null}
/>
`;

exports[`UU5.Bricks.Lsi props id 1`] = `
<lsi-item
  className={null}
  content="Text in Children"
  controlled={true}
  disabled={false}
  dynamic={false}
  hidden={false}
  id="childID"
  ignoreInnerHTML={false}
  key="childID"
  language="cs"
  mainAttrs={null}
  name={null}
  nestingLevel="bigBoxCollection"
  noIndex={false}
  pureRender={false}
  ref_={null}
  selected={false}
  style={null}
  tooltip={null}
/>
`;

exports[`UU5.Bricks.Lsi props ignoreHTML 1`] = `
<lsi-item
  className={null}
  content="Text in Children"
  controlled={true}
  disabled={false}
  dynamic={false}
  hidden={false}
  id="childID"
  ignoreInnerHTML={false}
  key="childID"
  language="cs"
  mainAttrs={null}
  name={null}
  nestingLevel="bigBoxCollection"
  noIndex={false}
  pureRender={false}
  ref_={null}
  selected={false}
  style={null}
  tooltip={null}
/>
`;

exports[`UU5.Bricks.Lsi props ignoreHTML 2`] = `
<lsi-item
  className={null}
  content="Text in Children"
  controlled={true}
  disabled={false}
  dynamic={false}
  hidden={false}
  id="childID"
  ignoreInnerHTML={false}
  key="childID"
  language="cs"
  mainAttrs={null}
  name={null}
  nestingLevel="bigBoxCollection"
  noIndex={false}
  pureRender={false}
  ref_={null}
  selected={false}
  style={null}
  tooltip={null}
/>
`;

exports[`UU5.Bricks.Lsi props ignoreHTML 3`] = `
<lsi-item
  className={null}
  content="Text in Children"
  controlled={true}
  disabled={false}
  dynamic={false}
  hidden={false}
  id="childID"
  ignoreInnerHTML={false}
  key="childID"
  language="cs"
  mainAttrs={null}
  name={null}
  nestingLevel="bigBoxCollection"
  noIndex={false}
  pureRender={false}
  ref_={null}
  selected={false}
  style={null}
  tooltip={null}
/>
`;

exports[`UU5.Bricks.Lsi props ignoreHTML 4`] = `
<lsi-item
  className={null}
  content="Text in Children"
  controlled={true}
  disabled={false}
  dynamic={false}
  hidden={false}
  id="childID"
  ignoreInnerHTML={false}
  key="childID"
  language="cs"
  mainAttrs={null}
  name={null}
  nestingLevel="bigBoxCollection"
  noIndex={false}
  pureRender={false}
  ref_={null}
  selected={false}
  style={null}
  tooltip={null}
/>
`;

exports[`UU5.Bricks.Lsi props language 1`] = `
<lsi-item
  className={null}
  content="Text in Children"
  controlled={true}
  disabled={false}
  dynamic={false}
  hidden={false}
  id="childID"
  ignoreInnerHTML={false}
  key="childID"
  language="cs"
  mainAttrs={null}
  name={null}
  nestingLevel="bigBoxCollection"
  noIndex={false}
  pureRender={false}
  ref_={null}
  selected={false}
  style={null}
  tooltip={null}
/>
`;

exports[`UU5.Bricks.Lsi props language 2`] = `
<lsi-item
  className={null}
  content="Text in Children"
  controlled={true}
  disabled={false}
  dynamic={false}
  hidden={false}
  id="childID"
  ignoreInnerHTML={false}
  key="childID"
  language="cs"
  mainAttrs={null}
  name={null}
  nestingLevel="bigBoxCollection"
  noIndex={false}
  pureRender={false}
  ref_={null}
  selected={false}
  style={null}
  tooltip={null}
/>
`;

exports[`UU5.Bricks.Lsi props language 3`] = `
<lsi-item
  className={null}
  content="Text in Children"
  controlled={true}
  disabled={false}
  dynamic={false}
  hidden={false}
  id="childID"
  ignoreInnerHTML={false}
  key="childID"
  language="cs"
  mainAttrs={null}
  name={null}
  nestingLevel="bigBoxCollection"
  noIndex={false}
  pureRender={false}
  ref_={null}
  selected={false}
  style={null}
  tooltip={null}
/>
`;

exports[`UU5.Bricks.Lsi props language 4`] = `
<lsi-item
  className={null}
  content="Text in Children"
  controlled={true}
  disabled={false}
  dynamic={false}
  hidden={false}
  id="childID"
  ignoreInnerHTML={false}
  key="childID"
  language="cs"
  mainAttrs={null}
  name={null}
  nestingLevel="bigBoxCollection"
  noIndex={false}
  pureRender={false}
  ref_={null}
  selected={false}
  style={null}
  tooltip={null}
/>
`;

exports[`UU5.Bricks.Lsi props language 5`] = `
<lsi-item
  className={null}
  content="Text in Children"
  controlled={true}
  disabled={false}
  dynamic={false}
  hidden={false}
  id="childID"
  ignoreInnerHTML={false}
  key="childID"
  language="cs"
  mainAttrs={null}
  name={null}
  nestingLevel="bigBoxCollection"
  noIndex={false}
  pureRender={false}
  ref_={null}
  selected={false}
  style={null}
  tooltip={null}
/>
`;

exports[`UU5.Bricks.Lsi props language 6`] = `
<lsi-item
  className={null}
  content="Text in Children"
  controlled={true}
  disabled={false}
  dynamic={false}
  hidden={false}
  id="childID"
  ignoreInnerHTML={false}
  key="childID"
  language="cs"
  mainAttrs={null}
  name={null}
  nestingLevel="bigBoxCollection"
  noIndex={false}
  pureRender={false}
  ref_={null}
  selected={false}
  style={null}
  tooltip={null}
/>
`;

exports[`UU5.Bricks.Lsi props language 7`] = `
<lsi-item
  className={null}
  content="Text in Children"
  controlled={true}
  disabled={false}
  dynamic={false}
  hidden={false}
  id="childID"
  ignoreInnerHTML={false}
  key="childID"
  language="cs"
  mainAttrs={null}
  name={null}
  nestingLevel="bigBoxCollection"
  noIndex={false}
  pureRender={false}
  ref_={null}
  selected={false}
  style={null}
  tooltip={null}
/>
`;

exports[`UU5.Bricks.Lsi props language 8`] = `
<lsi-item
  className={null}
  content="Text in Children"
  controlled={true}
  disabled={false}
  dynamic={false}
  hidden={false}
  id="childID"
  ignoreInnerHTML={false}
  key="childID"
  language="cs"
  mainAttrs={null}
  name={null}
  nestingLevel="bigBoxCollection"
  noIndex={false}
  pureRender={false}
  ref_={null}
  selected={false}
  style={null}
  tooltip={null}
/>
`;

exports[`UU5.Bricks.Lsi props language 9`] = `
<lsi-item
  className={null}
  content="Text in Children"
  controlled={true}
  disabled={false}
  dynamic={false}
  hidden={false}
  id="childID"
  ignoreInnerHTML={false}
  key="childID"
  language="cs"
  mainAttrs={null}
  name={null}
  nestingLevel="bigBoxCollection"
  noIndex={false}
  pureRender={false}
  ref_={null}
  selected={false}
  style={null}
  tooltip={null}
/>
`;

exports[`UU5.Bricks.Lsi props language 10`] = `
<lsi-item
  className={null}
  content="Text in Children"
  controlled={true}
  disabled={false}
  dynamic={false}
  hidden={false}
  id="childID"
  ignoreInnerHTML={false}
  key="childID"
  language="cs"
  mainAttrs={null}
  name={null}
  nestingLevel="bigBoxCollection"
  noIndex={false}
  pureRender={false}
  ref_={null}
  selected={false}
  style={null}
  tooltip={null}
/>
`;

exports[`UU5.Bricks.Lsi props language 11`] = `
<lsi-item
  className={null}
  content="Text in Children"
  controlled={true}
  disabled={false}
  dynamic={false}
  hidden={false}
  id="childID"
  ignoreInnerHTML={false}
  key="childID"
  language="cs"
  mainAttrs={null}
  name={null}
  nestingLevel="bigBoxCollection"
  noIndex={false}
  pureRender={false}
  ref_={null}
  selected={false}
  style={null}
  tooltip={null}
/>
`;

exports[`UU5.Bricks.Lsi props language 12`] = `
<lsi-item
  className={null}
  content="Text in Children"
  controlled={true}
  disabled={false}
  dynamic={false}
  hidden={false}
  id="childID"
  ignoreInnerHTML={false}
  key="childID"
  language="cs"
  mainAttrs={null}
  name={null}
  nestingLevel="bigBoxCollection"
  noIndex={false}
  pureRender={false}
  ref_={null}
  selected={false}
  style={null}
  tooltip={null}
/>
`;

exports[`UU5.Bricks.Lsi props language 13`] = `
<lsi-item
  className={null}
  content="Text in Children"
  controlled={true}
  disabled={false}
  dynamic={false}
  hidden={false}
  id="childID"
  ignoreInnerHTML={false}
  key="childID"
  language="cs"
  mainAttrs={null}
  name={null}
  nestingLevel="bigBoxCollection"
  noIndex={false}
  pureRender={false}
  ref_={null}
  selected={false}
  style={null}
  tooltip={null}
/>
`;

exports[`UU5.Bricks.Lsi props language 14`] = `
<lsi-item
  className={null}
  content="Text in Children"
  controlled={true}
  disabled={false}
  dynamic={false}
  hidden={false}
  id="childID"
  ignoreInnerHTML={false}
  key="childID"
  language="cs"
  mainAttrs={null}
  name={null}
  nestingLevel="bigBoxCollection"
  noIndex={false}
  pureRender={false}
  ref_={null}
  selected={false}
  style={null}
  tooltip={null}
/>
`;

exports[`UU5.Bricks.Lsi props language 15`] = `
<lsi-item
  className={null}
  content="Text in Children"
  controlled={true}
  disabled={false}
  dynamic={false}
  hidden={false}
  id="childID"
  ignoreInnerHTML={false}
  key="childID"
  language="cs"
  mainAttrs={null}
  name={null}
  nestingLevel="bigBoxCollection"
  noIndex={false}
  pureRender={false}
  ref_={null}
  selected={false}
  style={null}
  tooltip={null}
/>
`;

exports[`UU5.Bricks.Lsi props language 16`] = `
<lsi-item
  className={null}
  content="Text in Children"
  controlled={true}
  disabled={false}
  dynamic={false}
  hidden={false}
  id="childID"
  ignoreInnerHTML={false}
  key="childID"
  language="cs"
  mainAttrs={null}
  name={null}
  nestingLevel="bigBoxCollection"
  noIndex={false}
  pureRender={false}
  ref_={null}
  selected={false}
  style={null}
  tooltip={null}
/>
`;

exports[`UU5.Bricks.Lsi props language 17`] = `
<lsi-item
  className={null}
  content="Text in Children"
  controlled={true}
  disabled={false}
  dynamic={false}
  hidden={false}
  id="childID"
  ignoreInnerHTML={false}
  key="childID"
  language="cs"
  mainAttrs={null}
  name={null}
  nestingLevel="bigBoxCollection"
  noIndex={false}
  pureRender={false}
  ref_={null}
  selected={false}
  style={null}
  tooltip={null}
/>
`;

exports[`UU5.Bricks.Lsi props language 18`] = `
<lsi-item
  className={null}
  content="Text in Children"
  controlled={true}
  disabled={false}
  dynamic={false}
  hidden={false}
  id="childID"
  ignoreInnerHTML={false}
  key="childID"
  language="cs"
  mainAttrs={null}
  name={null}
  nestingLevel="bigBoxCollection"
  noIndex={false}
  pureRender={false}
  ref_={null}
  selected={false}
  style={null}
  tooltip={null}
/>
`;

exports[`UU5.Bricks.Lsi props language 19`] = `
<lsi-item
  className={null}
  content="Text in Children"
  controlled={true}
  disabled={false}
  dynamic={false}
  hidden={false}
  id="childID"
  ignoreInnerHTML={false}
  key="childID"
  language="cs"
  mainAttrs={null}
  name={null}
  nestingLevel="bigBoxCollection"
  noIndex={false}
  pureRender={false}
  ref_={null}
  selected={false}
  style={null}
  tooltip={null}
/>
`;

exports[`UU5.Bricks.Lsi props language 20`] = `
<lsi-item
  className={null}
  content="Text in Children"
  controlled={true}
  disabled={false}
  dynamic={false}
  hidden={false}
  id="childID"
  ignoreInnerHTML={false}
  key="childID"
  language="cs"
  mainAttrs={null}
  name={null}
  nestingLevel="bigBoxCollection"
  noIndex={false}
  pureRender={false}
  ref_={null}
  selected={false}
  style={null}
  tooltip={null}
/>
`;

exports[`UU5.Bricks.Lsi props lsi 1`] = `
<lsi-item
  className={null}
  content="Text in Children"
  controlled={true}
  disabled={false}
  dynamic={false}
  hidden={false}
  id="childID"
  ignoreInnerHTML={false}
  key="childID"
  language="cs"
  mainAttrs={null}
  name={null}
  nestingLevel="bigBoxCollection"
  noIndex={false}
  pureRender={false}
  ref_={null}
  selected={false}
  style={null}
  tooltip={null}
/>
`;

exports[`UU5.Bricks.Lsi props mainAttrs 1`] = `
<lsi-item
  className={null}
  content="Text in Children"
  controlled={true}
  disabled={false}
  dynamic={false}
  hidden={false}
  id="childID"
  ignoreInnerHTML={false}
  key="childID"
  language="cs"
  mainAttrs={null}
  name={null}
  nestingLevel="bigBoxCollection"
  noIndex={false}
  pureRender={false}
  ref_={null}
  selected={false}
  style={null}
  tooltip={null}
/>
`;

exports[`UU5.Bricks.Lsi props name 1`] = `
<lsi-item
  className={null}
  content="Text in Children"
  controlled={true}
  disabled={false}
  dynamic={false}
  hidden={false}
  id="childID"
  ignoreInnerHTML={false}
  key="childID"
  language="cs"
  mainAttrs={null}
  name={null}
  nestingLevel="bigBoxCollection"
  noIndex={false}
  pureRender={false}
  ref_={null}
  selected={false}
  style={null}
  tooltip={null}
/>
`;

exports[`UU5.Bricks.Lsi props nestingLevel 1`] = `
<lsi-item
  className={null}
  content="Text in Children"
  controlled={true}
  disabled={false}
  dynamic={false}
  hidden={false}
  id="childID"
  ignoreInnerHTML={false}
  key="childID"
  language="cs"
  mainAttrs={null}
  name={null}
  nestingLevel="bigBoxCollection"
  noIndex={false}
  pureRender={false}
  ref_={null}
  selected={false}
  style={null}
  tooltip={null}
/>
`;

exports[`UU5.Bricks.Lsi props nestingLevel 2`] = `
<lsi-item
  className={null}
  content="Text in Children"
  controlled={true}
  disabled={false}
  dynamic={false}
  hidden={false}
  id="childID"
  ignoreInnerHTML={false}
  key="childID"
  language="cs"
  mainAttrs={null}
  name={null}
  nestingLevel="bigBoxCollection"
  noIndex={false}
  pureRender={false}
  ref_={null}
  selected={false}
  style={null}
  tooltip={null}
/>
`;

exports[`UU5.Bricks.Lsi props nestingLevel 3`] = `
<lsi-item
  className={null}
  content="Text in Children"
  controlled={true}
  disabled={false}
  dynamic={false}
  hidden={false}
  id="childID"
  ignoreInnerHTML={false}
  key="childID"
  language="cs"
  mainAttrs={null}
  name={null}
  nestingLevel="bigBoxCollection"
  noIndex={false}
  pureRender={false}
  ref_={null}
  selected={false}
  style={null}
  tooltip={null}
/>
`;

exports[`UU5.Bricks.Lsi props nestingLevel 4`] = `
<lsi-item
  className={null}
  content="Text in Children"
  controlled={true}
  disabled={false}
  dynamic={false}
  hidden={false}
  id="childID"
  ignoreInnerHTML={false}
  key="childID"
  language="cs"
  mainAttrs={null}
  name={null}
  nestingLevel="bigBoxCollection"
  noIndex={false}
  pureRender={false}
  ref_={null}
  selected={false}
  style={null}
  tooltip={null}
/>
`;

exports[`UU5.Bricks.Lsi props nestingLevel 5`] = `
<lsi-item
  className={null}
  content="Text in Children"
  controlled={true}
  disabled={false}
  dynamic={false}
  hidden={false}
  id="childID"
  ignoreInnerHTML={false}
  key="childID"
  language="cs"
  mainAttrs={null}
  name={null}
  nestingLevel="bigBoxCollection"
  noIndex={false}
  pureRender={false}
  ref_={null}
  selected={false}
  style={null}
  tooltip={null}
/>
`;

exports[`UU5.Bricks.Lsi props nestingLevel 6`] = `
<lsi-item
  className={null}
  content="Text in Children"
  controlled={true}
  disabled={false}
  dynamic={false}
  hidden={false}
  id="childID"
  ignoreInnerHTML={false}
  key="childID"
  language="cs"
  mainAttrs={null}
  name={null}
  nestingLevel="bigBoxCollection"
  noIndex={false}
  pureRender={false}
  ref_={null}
  selected={false}
  style={null}
  tooltip={null}
/>
`;

exports[`UU5.Bricks.Lsi props nestingLevel 7`] = `
<lsi-item
  className={null}
  content="Text in Children"
  controlled={true}
  disabled={false}
  dynamic={false}
  hidden={false}
  id="childID"
  ignoreInnerHTML={false}
  key="childID"
  language="cs"
  mainAttrs={null}
  name={null}
  nestingLevel="bigBoxCollection"
  noIndex={false}
  pureRender={false}
  ref_={null}
  selected={false}
  style={null}
  tooltip={null}
/>
`;

exports[`UU5.Bricks.Lsi props nestingLevel 8`] = `
<lsi-item
  className={null}
  content="Text in Children"
  controlled={true}
  disabled={false}
  dynamic={false}
  hidden={false}
  id="childID"
  ignoreInnerHTML={false}
  key="childID"
  language="cs"
  mainAttrs={null}
  name={null}
  nestingLevel="bigBoxCollection"
  noIndex={false}
  pureRender={false}
  ref_={null}
  selected={false}
  style={null}
  tooltip={null}
/>
`;

exports[`UU5.Bricks.Lsi props nestingLevel 9`] = `
<lsi-item
  className={null}
  content="Text in Children"
  controlled={true}
  disabled={false}
  dynamic={false}
  hidden={false}
  id="childID"
  ignoreInnerHTML={false}
  key="childID"
  language="cs"
  mainAttrs={null}
  name={null}
  nestingLevel="bigBox"
  noIndex={false}
  pureRender={false}
  ref_={null}
  selected={false}
  style={null}
  tooltip={null}
/>
`;

exports[`UU5.Bricks.Lsi props nestingLevel 10`] = `
<lsi-item
  className={null}
  content="Text in Children"
  controlled={true}
  disabled={false}
  dynamic={false}
  hidden={false}
  id="childID"
  ignoreInnerHTML={false}
  key="childID"
  language="cs"
  mainAttrs={null}
  name={null}
  nestingLevel="bigBox"
  noIndex={false}
  pureRender={false}
  ref_={null}
  selected={false}
  style={null}
  tooltip={null}
/>
`;

exports[`UU5.Bricks.Lsi props nestingLevel 11`] = `
<lsi-item
  className={null}
  content="Text in Children"
  controlled={true}
  disabled={false}
  dynamic={false}
  hidden={false}
  id="childID"
  ignoreInnerHTML={false}
  key="childID"
  language="cs"
  mainAttrs={null}
  name={null}
  nestingLevel="boxCollection"
  noIndex={false}
  pureRender={false}
  ref_={null}
  selected={false}
  style={null}
  tooltip={null}
/>
`;

exports[`UU5.Bricks.Lsi props nestingLevel 12`] = `
<lsi-item
  className={null}
  content="Text in Children"
  controlled={true}
  disabled={false}
  dynamic={false}
  hidden={false}
  id="childID"
  ignoreInnerHTML={false}
  key="childID"
  language="cs"
  mainAttrs={null}
  name={null}
  nestingLevel="boxCollection"
  noIndex={false}
  pureRender={false}
  ref_={null}
  selected={false}
  style={null}
  tooltip={null}
/>
`;

exports[`UU5.Bricks.Lsi props nestingLevel 13`] = `
<lsi-item
  className={null}
  content="Text in Children"
  controlled={true}
  disabled={false}
  dynamic={false}
  hidden={false}
  id="childID"
  ignoreInnerHTML={false}
  key="childID"
  language="cs"
  mainAttrs={null}
  name={null}
  nestingLevel="box"
  noIndex={false}
  pureRender={false}
  ref_={null}
  selected={false}
  style={null}
  tooltip={null}
/>
`;

exports[`UU5.Bricks.Lsi props nestingLevel 14`] = `
<lsi-item
  className={null}
  content="Text in Children"
  controlled={true}
  disabled={false}
  dynamic={false}
  hidden={false}
  id="childID"
  ignoreInnerHTML={false}
  key="childID"
  language="cs"
  mainAttrs={null}
  name={null}
  nestingLevel="box"
  noIndex={false}
  pureRender={false}
  ref_={null}
  selected={false}
  style={null}
  tooltip={null}
/>
`;

exports[`UU5.Bricks.Lsi props nestingLevel 15`] = `
<lsi-item
  className={null}
  content="Text in Children"
  controlled={true}
  disabled={false}
  dynamic={false}
  hidden={false}
  id="childID"
  ignoreInnerHTML={false}
  key="childID"
  language="cs"
  mainAttrs={null}
  name={null}
  nestingLevel="smallBoxCollection"
  noIndex={false}
  pureRender={false}
  ref_={null}
  selected={false}
  style={null}
  tooltip={null}
/>
`;

exports[`UU5.Bricks.Lsi props nestingLevel 16`] = `
<lsi-item
  className={null}
  content="Text in Children"
  controlled={true}
  disabled={false}
  dynamic={false}
  hidden={false}
  id="childID"
  ignoreInnerHTML={false}
  key="childID"
  language="cs"
  mainAttrs={null}
  name={null}
  nestingLevel="smallBoxCollection"
  noIndex={false}
  pureRender={false}
  ref_={null}
  selected={false}
  style={null}
  tooltip={null}
/>
`;

exports[`UU5.Bricks.Lsi props nestingLevel 17`] = `
<lsi-item
  className={null}
  content="Text in Children"
  controlled={true}
  disabled={false}
  dynamic={false}
  hidden={false}
  id="childID"
  ignoreInnerHTML={false}
  key="childID"
  language="cs"
  mainAttrs={null}
  name={null}
  nestingLevel="smallBox"
  noIndex={false}
  pureRender={false}
  ref_={null}
  selected={false}
  style={null}
  tooltip={null}
/>
`;

exports[`UU5.Bricks.Lsi props nestingLevel 18`] = `
<lsi-item
  className={null}
  content="Text in Children"
  controlled={true}
  disabled={false}
  dynamic={false}
  hidden={false}
  id="childID"
  ignoreInnerHTML={false}
  key="childID"
  language="cs"
  mainAttrs={null}
  name={null}
  nestingLevel="smallBox"
  noIndex={false}
  pureRender={false}
  ref_={null}
  selected={false}
  style={null}
  tooltip={null}
/>
`;

exports[`UU5.Bricks.Lsi props nestingLevel 19`] = `
<lsi-item
  className={null}
  content="Text in Children"
  controlled={true}
  disabled={false}
  dynamic={false}
  hidden={false}
  id="childID"
  ignoreInnerHTML={false}
  key="childID"
  language="cs"
  mainAttrs={null}
  name={null}
  nestingLevel="inline"
  noIndex={false}
  pureRender={false}
  ref_={null}
  selected={false}
  style={null}
  tooltip={null}
/>
`;

exports[`UU5.Bricks.Lsi props nestingLevel 20`] = `
<lsi-item
  className={null}
  content="Text in Children"
  controlled={true}
  disabled={false}
  dynamic={false}
  hidden={false}
  id="childID"
  ignoreInnerHTML={false}
  key="childID"
  language="cs"
  mainAttrs={null}
  name={null}
  nestingLevel="inline"
  noIndex={false}
  pureRender={false}
  ref_={null}
  selected={false}
  style={null}
  tooltip={null}
/>
`;

exports[`UU5.Bricks.Lsi props noIndex 1`] = `
<lsi-item
  className={null}
  content="Text in Children"
  controlled={true}
  disabled={false}
  dynamic={false}
  hidden={false}
  id="childID"
  ignoreInnerHTML={false}
  key="childID"
  language="cs"
  mainAttrs={null}
  name={null}
  nestingLevel="bigBoxCollection"
  noIndex={false}
  pureRender={false}
  ref_={null}
  selected={false}
  style={null}
  tooltip={null}
/>
`;

exports[`UU5.Bricks.Lsi props noIndex 2`] = `
<lsi-item
  className={null}
  content="Text in Children"
  controlled={true}
  disabled={false}
  dynamic={false}
  hidden={false}
  id="childID"
  ignoreInnerHTML={false}
  key="childID"
  language="cs"
  mainAttrs={null}
  name={null}
  nestingLevel="bigBoxCollection"
  noIndex={false}
  pureRender={false}
  ref_={null}
  selected={false}
  style={null}
  tooltip={null}
/>
`;

exports[`UU5.Bricks.Lsi props noIndex 3`] = `
<lsi-item
  className={null}
  content="Text in Children"
  controlled={true}
  disabled={false}
  dynamic={false}
  hidden={false}
  id="childID"
  ignoreInnerHTML={false}
  key="childID"
  language="cs"
  mainAttrs={null}
  name={null}
  nestingLevel="bigBoxCollection"
  noIndex={false}
  pureRender={false}
  ref_={null}
  selected={false}
  style={null}
  tooltip={null}
/>
`;

exports[`UU5.Bricks.Lsi props noIndex 4`] = `
<lsi-item
  className={null}
  content="Text in Children"
  controlled={true}
  disabled={false}
  dynamic={false}
  hidden={false}
  id="childID"
  ignoreInnerHTML={false}
  key="childID"
  language="cs"
  mainAttrs={null}
  name={null}
  nestingLevel="bigBoxCollection"
  noIndex={false}
  pureRender={false}
  ref_={null}
  selected={false}
  style={null}
  tooltip={null}
/>
`;

exports[`UU5.Bricks.Lsi props params 1`] = `
<lsi-item
  className={null}
  content="Text in Children"
  controlled={true}
  disabled={false}
  dynamic={false}
  hidden={false}
  id="childID"
  ignoreInnerHTML={false}
  key="childID"
  language="cs"
  mainAttrs={null}
  name={null}
  nestingLevel="bigBoxCollection"
  noIndex={false}
  pureRender={false}
  ref_={null}
  selected={false}
  style={null}
  tooltip={null}
/>
`;

exports[`UU5.Bricks.Lsi props pureRender 1`] = `
<lsi-item
  className={null}
  content="Text in Children"
  controlled={true}
  disabled={false}
  dynamic={false}
  hidden={false}
  id="childID"
  ignoreInnerHTML={false}
  key="childID"
  language="cs"
  mainAttrs={null}
  name={null}
  nestingLevel="bigBoxCollection"
  noIndex={false}
  pureRender={false}
  ref_={null}
  selected={false}
  style={null}
  tooltip={null}
/>
`;

exports[`UU5.Bricks.Lsi props pureRender 2`] = `
<lsi-item
  className={null}
  content="Text in Children"
  controlled={true}
  disabled={false}
  dynamic={false}
  hidden={false}
  id="childID"
  ignoreInnerHTML={false}
  key="childID"
  language="cs"
  mainAttrs={null}
  name={null}
  nestingLevel="bigBoxCollection"
  noIndex={false}
  pureRender={false}
  ref_={null}
  selected={false}
  style={null}
  tooltip={null}
/>
`;

exports[`UU5.Bricks.Lsi props pureRender 3`] = `
<lsi-item
  className={null}
  content="Text in Children"
  controlled={true}
  disabled={false}
  dynamic={false}
  hidden={false}
  id="childID"
  ignoreInnerHTML={false}
  key="childID"
  language="cs"
  mainAttrs={null}
  name={null}
  nestingLevel="bigBoxCollection"
  noIndex={false}
  pureRender={false}
  ref_={null}
  selected={false}
  style={null}
  tooltip={null}
/>
`;

exports[`UU5.Bricks.Lsi props pureRender 4`] = `
<lsi-item
  className={null}
  content="Text in Children"
  controlled={true}
  disabled={false}
  dynamic={false}
  hidden={false}
  id="childID"
  ignoreInnerHTML={false}
  key="childID"
  language="cs"
  mainAttrs={null}
  name={null}
  nestingLevel="bigBoxCollection"
  noIndex={false}
  pureRender={false}
  ref_={null}
  selected={false}
  style={null}
  tooltip={null}
/>
`;

exports[`UU5.Bricks.Lsi props selected 1`] = `
<lsi-item
  className={null}
  content="Text in Children"
  controlled={true}
  disabled={false}
  dynamic={false}
  hidden={false}
  id="childID"
  ignoreInnerHTML={false}
  key="childID"
  language="cs"
  mainAttrs={null}
  name={null}
  nestingLevel="bigBoxCollection"
  noIndex={false}
  pureRender={false}
  ref_={null}
  selected={true}
  style={null}
  tooltip={null}
/>
`;

exports[`UU5.Bricks.Lsi props selected 2`] = `
<lsi-item
  className={null}
  content="Text in Children"
  controlled={true}
  disabled={false}
  dynamic={false}
  hidden={false}
  id="childID"
  ignoreInnerHTML={false}
  key="childID"
  language="cs"
  mainAttrs={null}
  name={null}
  nestingLevel="bigBoxCollection"
  noIndex={false}
  pureRender={false}
  ref_={null}
  selected={false}
  style={null}
  tooltip={null}
/>
`;

exports[`UU5.Bricks.Lsi props selected 3`] = `
<lsi-item
  className={null}
  content="Text in Children"
  controlled={true}
  disabled={false}
  dynamic={false}
  hidden={false}
  id="childID"
  ignoreInnerHTML={false}
  key="childID"
  language="cs"
  mainAttrs={null}
  name={null}
  nestingLevel="bigBoxCollection"
  noIndex={false}
  pureRender={false}
  ref_={null}
  selected={false}
  style={null}
  tooltip={null}
/>
`;

exports[`UU5.Bricks.Lsi props selected 4`] = `
<lsi-item
  className={null}
  content="Text in Children"
  controlled={true}
  disabled={false}
  dynamic={false}
  hidden={false}
  id="childID"
  ignoreInnerHTML={false}
  key="childID"
  language="cs"
  mainAttrs={null}
  name={null}
  nestingLevel="bigBoxCollection"
  noIndex={false}
  pureRender={false}
  ref_={null}
  selected={true}
  style={null}
  tooltip={null}
/>
`;

exports[`UU5.Bricks.Lsi props style 1`] = `
<lsi-item
  className={null}
  content="Text in Children"
  controlled={true}
  disabled={false}
  dynamic={false}
  hidden={false}
  id="childID"
  ignoreInnerHTML={false}
  key="childID"
  language="cs"
  mainAttrs={null}
  name={null}
  nestingLevel="bigBoxCollection"
  noIndex={false}
  pureRender={false}
  ref_={null}
  selected={false}
  style={null}
  tooltip={null}
/>
`;

exports[`UU5.Bricks.Lsi props style 2`] = `
<lsi-item
  className={null}
  content="Text in Children"
  controlled={true}
  disabled={false}
  dynamic={false}
  hidden={false}
  id="childID"
  ignoreInnerHTML={false}
  key="childID"
  language="cs"
  mainAttrs={null}
  name={null}
  nestingLevel="bigBoxCollection"
  noIndex={false}
  pureRender={false}
  ref_={null}
  selected={false}
  style={null}
  tooltip={null}
/>
`;

exports[`UU5.Bricks.Lsi props style 3`] = `
<lsi-item
  className={null}
  content="Text in Children"
  controlled={true}
  disabled={false}
  dynamic={false}
  hidden={false}
  id="childID"
  ignoreInnerHTML={false}
  key="childID"
  language="cs"
  mainAttrs={null}
  name={null}
  nestingLevel="bigBoxCollection"
  noIndex={false}
  pureRender={false}
  ref_={null}
  selected={false}
  style={null}
  tooltip={null}
/>
`;

exports[`UU5.Bricks.Lsi props style 4`] = `
<lsi-item
  className={null}
  content="Text in Children"
  controlled={true}
  disabled={false}
  dynamic={false}
  hidden={false}
  id="childID"
  ignoreInnerHTML={false}
  key="childID"
  language="cs"
  mainAttrs={null}
  name={null}
  nestingLevel="bigBoxCollection"
  noIndex={false}
  pureRender={false}
  ref_={null}
  selected={false}
  style={null}
  tooltip={null}
/>
`;

exports[`UU5.Bricks.Lsi props textCorrector 1`] = `
<lsi-item
  className={null}
  content="Text in Children"
  controlled={true}
  disabled={false}
  dynamic={false}
  hidden={false}
  id="childID"
  ignoreInnerHTML={false}
  key="childID"
  language="cs"
  mainAttrs={null}
  name={null}
  nestingLevel="bigBoxCollection"
  noIndex={false}
  pureRender={false}
  ref_={null}
  selected={false}
  style={null}
  tooltip={null}
/>
`;

exports[`UU5.Bricks.Lsi props textCorrector 2`] = `
<lsi-item
  className={null}
  content="Text in Children"
  controlled={true}
  disabled={false}
  dynamic={false}
  hidden={false}
  id="childID"
  ignoreInnerHTML={false}
  key="childID"
  language="cs"
  mainAttrs={null}
  name={null}
  nestingLevel="bigBoxCollection"
  noIndex={false}
  pureRender={false}
  ref_={null}
  selected={false}
  style={null}
  tooltip={null}
/>
`;

exports[`UU5.Bricks.Lsi props textCorrector 3`] = `
<lsi-item
  className={null}
  content="Text in Children"
  controlled={true}
  disabled={false}
  dynamic={false}
  hidden={false}
  id="childID"
  ignoreInnerHTML={false}
  key="childID"
  language="cs"
  mainAttrs={null}
  name={null}
  nestingLevel="bigBoxCollection"
  noIndex={false}
  pureRender={false}
  ref_={null}
  selected={false}
  style={null}
  tooltip={null}
/>
`;

exports[`UU5.Bricks.Lsi props textCorrector 4`] = `
<lsi-item
  className={null}
  content="Text in Children"
  controlled={true}
  disabled={false}
  dynamic={false}
  hidden={false}
  id="childID"
  ignoreInnerHTML={false}
  key="childID"
  language="cs"
  mainAttrs={null}
  name={null}
  nestingLevel="bigBoxCollection"
  noIndex={false}
  pureRender={false}
  ref_={null}
  selected={false}
  style={null}
  tooltip={null}
/>
`;

exports[`UU5.Bricks.Lsi props tooltip 1`] = `
<lsi-item
  className={null}
  content="Text in Children"
  controlled={true}
  disabled={false}
  dynamic={false}
  hidden={false}
  id="childID"
  ignoreInnerHTML={false}
  key="childID"
  language="cs"
  mainAttrs={null}
  name={null}
  nestingLevel="bigBoxCollection"
  noIndex={false}
  pureRender={false}
  ref_={null}
  selected={false}
  style={null}
  tooltip={null}
/>
`;
